fix dialog demo for small screens (#537)

--- a/demos/dialog.html
+++ b/demos/dialog.html
@@ -39,7 +39,7 @@ limitations under the License.
   </header>
 
   <main>
-    <div class="demo-group">
+    <div>
 
     <mwc-button data-num="1" raised>Basic</mwc-button>
     <mwc-dialog id="dialog1" title="Dialog header">
