Remove mwc-icon-font.js
Let's just have the one way to load fonts, as documented in our README.
Updated all the demos to use the same recommendation.

--- a/demos/index.html
+++ b/demos/index.html
@@ -20,8 +20,8 @@ limitations under the License.
   <title>Material Web Components Catalog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="demo-component.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Material+Icons">
-</head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
 <body>
   <demo-view></demo-view>
 
