--- a/demos/top-app-bars/standard.html
+++ b/demos/top-app-bars/standard.html
@@ -2,6 +2,8 @@
 <script type="module" src="../../node_modules/@material/mwc-top-app-bar/mwc-top-app-bar.js"></script>
 <script type="module" src="../../node_modules/@material/mwc-icon-button/mwc-icon-button.js"></script>
 <link rel="stylesheet" href="./styling.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
 <mwc-top-app-bar id="bar">
     <mwc-icon-button icon="menu" slot="navigationIcon"></mwc-icon-button>
     <div slot="title" id="title">Standard</div>
