--- a/demos/drawer/dismissible.html
+++ b/demos/drawer/dismissible.html
@@ -25,6 +25,8 @@ limitations under the License.
   <script type="module" src="../../node_modules/@material/mwc-icon-button/mwc-icon-button.js"></script>
   <link rel="stylesheet" href="../demo-component.css">
   <link rel="stylesheet" href="drawer.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
 </head>
 <body>
   <mwc-drawer hasHeader type="dismissible">
