--- a/demos/drawer/standard.html
+++ b/demos/drawer/standard.html
@@ -24,6 +24,8 @@ limitations under the License.
   <script type="module" src="../../node_modules/@material/mwc-top-app-bar/mwc-top-app-bar.js"></script>
   <link rel="stylesheet" href="../demo-component.css">
   <link rel="stylesheet" href="drawer.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
 </head>
 <body>
   <mwc-drawer hasHeader>
