--- a/demos/slider.html
+++ b/demos/slider.html
@@ -23,6 +23,8 @@ limitations under the License.
   <script type="module" src="../node_modules/@material/mwc-slider/mwc-slider.js"></script>
   <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
   <link rel="stylesheet" href="demo-component.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   <style>
     .demo-container {
       display: flex;
