--- a/demos/textfield.html
+++ b/demos/textfield.html
@@ -22,8 +22,9 @@ limitations under the License.
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-textfield/mwc-textfield.js"></script>
   <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon.js"></script>
-  <script type="module" src="../node_modules/@material/mwc-icon/mwc-icon-font.js"></script>
   <link rel="stylesheet" href="demo-component.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   <style>
     mwc-textfield {
       min-width: 240px;
