Checkbox ripple fixes
* Adds ripple node which is now required by MDC.
* Corrects `isSurfaceDisabled` to reflect the live state of the interactionNode.

--- a/demos/checkbox.html
+++ b/demos/checkbox.html
@@ -35,11 +35,12 @@ limitations under the License.
   <main>
     <div class="demo-group">
 
-      <mwc-checkbox tabIndex="3"></mwc-checkbox>
-      <mwc-checkbox tabIndex="2" checked></mwc-checkbox>
-      <mwc-checkbox tabIndex="1" indeterminate></mwc-checkbox>
-      <mwc-checkbox tabIndex="-1" indeterminate></mwc-checkbox>
+      <mwc-checkbox></mwc-checkbox>
+      <mwc-checkbox checked></mwc-checkbox>
+      <mwc-checkbox indeterminate></mwc-checkbox>
+      <mwc-checkbox indeterminate></mwc-checkbox>
       <mwc-checkbox disabled></mwc-checkbox>
+      <mwc-checkbox></mwc-checkbox>
 
     </div>
   </main>
