--- a/demos/drawer.html
+++ b/demos/drawer.html
@@ -26,7 +26,6 @@ limitations under the License.
   <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   <style>
     iframe {
-      border: 1px solid gray;
       margin-bottom: 36px;
       height: 300px;
       width: 100%;
@@ -41,10 +40,12 @@ limitations under the License.
 
   <main>
     <h2>Standard Drawer</h2>
+    <iframe src="drawer/standard_no_header.html" frameborder="0"></iframe>
+    <h2>Standard Drawer with Header</h2>
     <iframe src="drawer/standard.html" frameborder="0"></iframe>
-    <h2>Dismissible Drawer</h2>
+    <h2>Dismissible Drawer with header</h2>
     <iframe src="drawer/dismissible.html" frameborder="0"></iframe>
-    <h2>Modal Drawer</h2>
+    <h2>Modal Drawer with header</h2>
     <iframe src="drawer/modal.html" frameborder="0"></iframe>
   </main>
 
