--- a/demos/slider.html
+++ b/demos/slider.html
@@ -55,7 +55,7 @@ limitations under the License.
 
     <h3>Discrete</h3>
     <div class="demo-container demo-colory">
-      <mwc-slider discrete markers max="50" value="10" step="5"></mwc-slider>
+      <mwc-slider pin markers max="50" value="10" step="5"></mwc-slider>
     </div>
 
     <h3>Disabled</h3>
