--- a/demos/linear-progress.html
+++ b/demos/linear-progress.html
@@ -35,7 +35,7 @@ limitations under the License.
 
     .demo-progress-bar {
       --mdc-theme-primary: red;
-      --mdc-theme-secondary: orange;
+      --mdc-linear-progress-buffer-color: orange;
       --mdc-linear-progress-buffering-dots-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' enable-background='new 0 0 5 2' xml:space='preserve' viewBox='0 0 5 2' preserveAspectRatio='none slice'%3E%3Ccircle cx='1' cy='1' r='1' fill='%23ffcdd2'/%3E%3C/svg%3E");
     }
 
